Synergism.css
/* ... */
#singularityPenaltiesMultiline {
    white-space: pre-line;
    justify-content: center;
    margin-top: 1px;
    margin-bottom: 1px;
}

#singularityPerkContainer {
    display: grid;
    grid-template-rows: repeat(2, min-content);
}

#singularityPerksHeader {
    display: block;
    margin: 1px;
    height: min-content;
}

#singualrityPerksInfo {
    display: grid;
    grid-template-columns: repeat(2, auto);
}

img#singularityPerksIcon {
    display: grid;
    justify-self: end;
    align-self: end;
    padding-right: 5px;
}

#singularityPerksText {
    display: block;
    justify-self: start;
    margin-bottom: 1px;
}

#singularityPerksDesc {
    display: block;
    white-space: pre-line;
    margin: 5px 5px 1px;
    height: 150px;
    min-width: 39em;
    max-width: 39em;
    padding: 5px;
    overflow: auto;
    text-align: center;
}

#singularityPerksGrid {
    display: grid;
    grid-template-columns: repeat(5, 250px);
    grid-template-rows: repeat(10, auto);
    grid-auto-rows: auto;
    justify-content: center;
    align-content: center;
    grid-gap: 4px;
    font-size: 1em;
    margin-top: 5px;
}

.singularityPerkModal {
    display: flex;
    flex-direction: column;
    gap: 10px;
    text-align: center;
}

.singularityPerkModalTitle {
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 10px;
    color: gold;
    font-size: 1.1em;
    flex-wrap: wrap;
}

.singularityPerkModalTitle img {
    width: 48px;
    height: 48px;
    object-fit: contain;
}

.singularityPerkModalLevel {
    color: lightgoldenrodyellow;
}

.singularityPerkModalDescription {
    line-height: 1.35;
    white-space: pre-line;
}

#octeractUpgradeValues,
#ambrosiaUpgradeValues {
    width: 100%;
}

#goldenQuarkMultiline,
#singularityOcteractsMultiline,
#singularityAmbrosiaMultiline {
    white-space: pre-line;
    margin: 15px auto 0;
    justify-content: center;
    width: 40%;
    text-align: center;
}

#accountSubTab {
    white-space: pre-line;
    margin: 15px 0 0;
    justify-content: center;
    flex-direction: column;
}

#singularityChallengeDetails {
    display: none;
}

.singularityChallengeDetails {
    display: block;
}

#singularityChallengesInfo,
.singularityChallengesInfo {
    white-space: pre-line;
    margin-top: 10px;
    margin-bottom: 5px;
    text-align: center;
}

#singularityChallengeAllRewards,
.singularityChallengeAllRewards {
    display: grid;
    grid-template-rows: repeat(2, auto);
    grid-template-columns: repeat(2, 375px);
    justify-content: center;
    grid-gap: 10px;
}

#singularityChallengeScalingHeader,
.singularityChallengeScalingHeader {
    font-weight: bold;
    font-size: 1.2em;
    text-align: center;
    margin: 0;
}

#singularityChallengeUniqueHeader,
.singularityChallengeUniqueHeader {
    font-weight: bold;
    font-size: 1.2em;
    text-align: center;
    margin: 0;
}

#singularityChallengesScalingRewards,
.singularityChallengesScalingRewards {
    display: block;
    white-space: pre-line;
    margin: 0;
    text-align: center;
}

#singularityChallengesUniqueRewards,
.singularityChallengesUniqueRewards {
    display: block;
    white-space: pre-line;
    margin: 0;
}

.newPerk {
    display: grid;
    grid-template-columns: repeat(2, auto);
    justify-items: left;
    align-items: center;
    text-align: center;
    padding: 2px;
    cursor: pointer;
    color: gold;
    border: 2px ridge gold;
    font-weight: bold;
    background-color: var(--button-color);
    transition: background-color var(--transition-extra), border-color var(--transition-extra);
}

.oldPerk {
    display: grid;
    grid-template-columns: repeat(2, auto);
    justify-items: left;
    align-items: center;
    text-align: center;
    padding: 2px;
    cursor: pointer;
    border: 2px solid gold;
    background-color: var(--button-color);
    transition: background-color var(--transition-extra), border-color var(--transition-extra);
}

.newPerk:hover {
    background-color: var(--hover-color);
}

.oldPerk:hover {
    background-color: var(--hover-color);
}

#autoHepteractPercentage {
    display: block;
    width: 100%;
    text-align: center;
    padding-bottom: 5px;
}

#event {
    position: relative;
    text-align: center;
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 20px;
    width: 100%;
}

.event-container {
    border-radius: 8px;
    padding: 15px;
}

.event-title {
    margin: 0 0 10px;
    color: #ffd700;
}

#event-bonus,
#event-timer,
.event-timer {
    margin: 5px 0;
}

#globalEventBonus,
#globalEventTimer {
    color: #8f8;
}

.temporaryBuffContainer {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
}

.eventBuffVal,
.consumableBuffVal {
    display: flex;
    align-items: center;
}

.eventBuffVal img,
.consumableBuffVal img {
    margin: 0;
    padding: 0;
    height: 32px;
    width: 32px;
}

.eventBuffVal p,
.consumableBuffVall p {
    margin: 0;
    padding: 0;
}

.consumableButton,
#apply-tips {
    border: 2px solid #ffd700;
    background-color: #ffd700;
    color: black;
    cursor: pointer;
    padding: 5px;
    margin: 5px;
    width: 150px;
}

#apply-tips:not(:hover) {
    border: 2px solid var(--hovershop-color);
    background-color: var(--hovershop-color);
}

@keyframes rotation {
    from {
        transform: rotate(0deg);
    }

    to {
        transform: rotate(359deg);
    }
}

*[class^="hoveredBlueberryLoadout"] div[class^="bbPurchasedLoadout"] {
    background-color: green;
}

.blueberryPrereq {
    height: 28px;
    width: 28px;
    border: 2px solid gold;
}

/* Style for dimmed image */
.blueberryUpgrade img.dimmed,
.redAmbrosiaUpgrade img.dimmed {
    opacity: 0.3;
}

.blueberryUpgrade img.superDimmed,
.redAmbrosiaUpgrade img.superDimmed {
    opacity: 0; /* if not bought, fully dim */
}
/* ... */

